# synapse

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  TODO.md  tech_design.md
.commands/: learn.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
.reports/: codemap-diff.txt
crates/synapse-api/: Cargo.toml
crates/synapse-api/examples/: print_openapi.rs
crates/synapse-api/src/: app.rs  metrics.rs  server.rs
crates/synapse-api/tests/: api_endpoints.rs
crates/synapse-cli/: Cargo.toml
crates/synapse-cli/src/: doctor.rs  main.rs
crates/synapse-console/src/: admin_console.html
crates/synapse-core/: Cargo.toml
crates/synapse-core/benches/: mvp.rs
crates/synapse-core/src/: audit.rs  cgroups.rs  config.rs  error.rs  executor.rs  lib.rs  pool.rs  providers.rs  request_summary.rs  runtime.rs  runtimes.rs  sandbox.rs  service.rs  tenancy.rs  types.rs
crates/synapse-core/tests/: runtime_isolation.rs
crates/synapse-engine/: Cargo.toml
crates/synapse-engine/src/: cgroups.rs  lib.rs  runtime.rs  seccomp.rs  syscall_audit.rs
docs/: README.md  api-reference.md  architecture-refactor-plan.md  openapi.json  release-process.md
docs/CODEMAPS/: architecture.md  architecture.mmd  backend.md  data.md  dependencies.md  frontend.md
docs/architecture/: tech-design.md
docs/plans/: go-to-market-execution-plan.md  ops-console-plan.md  oss-mvp-plan.md
docs/product/: demo-script.md  objections-log-template.md  poc-playbook.md  product.md
docs/quickstart/: 10-minute-quickstart.md  enterprise-poc-guide.md  runtime-operations-guide.md
docs/roadmaps/: enterprise-sandbox-roadmap.md
docs/session-snapshots/: 2026-03-25-architecture-refactor.tmp
examples/pr-review-agent/: README.md
scripts/: http_bench.py  p0_gate.sh  perf_gate.sh  pr_review_demo_smoke.sh  quickstart_smoke.sh  release_gate_v1.sh
scripts/tests/: test_gtm_assets.py
sdk/python/src/synapse_sdk/: client.py
sdk/python/tests/: test_client.py
