[package]
name = "synapse-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
synapse-core = { path = "../synapse-core" }
synapse-console = { path = "../synapse-console" }
axum = { workspace = true, features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
futures-util = "0.3"
tokio-tungstenite = "0.24"
tower = { version = "0.5", features = ["util"] }
url = "2"
