[package]
name = "synapse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
synapse-api = { path = "../synapse-api" }
synapse-core = { path = "../synapse-core" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
