[package]
name = "synapse-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
synapse-engine = { path = "../synapse-engine" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "mvp"
harness = false
